# diesel_pg_ext

./: .gitignore  Cargo.toml  README.md
src/: group_aggregate_helper.rs  group_aggregate_macros.rs  group_function_macro.rs  group_two_arg.rs  lib.rs
tests/: diesel.toml  test_additional_sql.rs  test_group_function.rs  test_sql_generation.rs
tests/common/: db.rs  mod.rs  schema.rs
tests/migrations/: .gitignore
tests/migrations/2026-04-22-213356-0000_first/: up.sql
