[package]
name = "diesel_pg_ext"
version = "0.1.1"
edition = "2024"
description = "PostgreSQL-specific diesel SQL function extensions"
license = "MIT"
repository = "https://github.com/dnp1/diesel_pg_ext"
keywords = ["database"]
categories = ["database"]
authors = ["developer@danilo.info"]

[dependencies]
diesel = { version = "~2.3.7", features = ["postgres", "serde_json", "uuid"] }


[dev-dependencies]
diesel_migrations = "2.3.1"
diesel-async = { version = "0.8.0", features = ["postgres", "bb8", "migrations", ] }
serde_json = "1"
test-containers-util = { version = "0.1.4", features = ["pg-diesel"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = "1"
